<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#3F51B5"
        android:text="@string/resistration_form"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView"
        android:text="@string/name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView6"
        android:text="@string/email"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_below="@id/t1"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView7"
        android:text="@string/password"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_below="@id/t2"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView8"
        android:text="@string/gender2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_below="@id/t3"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/textView10"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView9"
        android:text="@string/education2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_below="@id/t4"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView10"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"/>
</RelativeLayout>